--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -1,4 +1,4 @@
-name: PR Validation & CHANGELOG
+name: PR Check
 
 on:
   pull_request:
@@ -13,9 +13,9 @@ permissions:
   pull-requests: write
 
 jobs:
-  validate-and-generate:
+  pr-validation:
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Validate PR title
       uses: amannn/action-semantic-pull-request@v5
@@ -45,7 +45,7 @@ jobs:
           bot
         validateSingleCommit: false
         validateSingleCommitMatchesPrTitle: false
-    
+
     - name: Comment on invalid PR title
       if: failure()
       uses: actions/github-script@v7
@@ -101,7 +101,7 @@ jobs:
 
           Please update your PR title to match this format. The check will automatically re-run.`
           })
-    
+
     - name: Checkout PR branch
       if: github.event.action != 'edited'
       uses: actions/checkout@v4
@@ -109,7 +109,7 @@ jobs:
         ref: ${{ github.head_ref }}
         fetch-depth: 0
         token: ${{ secrets.GITHUB_TOKEN }}
-    
+
     - name: Check if CHANGELOG was modified
       if: github.event.action != 'edited'
       id: check_changelog_modified
@@ -123,33 +123,33 @@ jobs:
           echo "✅ CHANGELOG.md was not modified, proceeding with generation"
           echo "modified=false" >> $GITHUB_OUTPUT
         fi
-    
+
     - name: Setup Node.js
       if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       uses: actions/setup-node@v4
       with:
         node-version: '18'
-    
+
     - name: Install conventional-changelog
       if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       run: npm install -g conventional-changelog-cli
-    
+
     - name: Determine version and channel
       if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       id: version
       run: |
         BRANCH="${{ github.base_ref }}"
         PR_TITLE="${{ github.event.pull_request.title }}"
-        
+
         echo "🎯 Target branch: $BRANCH"
         echo "📝 PR Title: $PR_TITLE"
-        
+
         # Fetch all tags
         git fetch --tags
-        
+
         # Find the latest semantic version tag (stable releases only for base version)
         LATEST_STABLE_TAG=$(git tag -l "v*.*.*" | grep -v "-" | sort -V | tail -1)
-        
+
         if [ -z "$LATEST_STABLE_TAG" ]; then
           # No stable tags found, use 1.0.0 without bumping
           BASE_VERSION="1.0.0"
@@ -158,13 +158,13 @@ jobs:
           # Parse existing version
           CURRENT_VERSION="${LATEST_STABLE_TAG#v}"
           echo "📦 Latest stable version: $CURRENT_VERSION"
-          
+
           MAJOR=$(echo "$CURRENT_VERSION" | cut -d. -f1)
           MINOR=$(echo "$CURRENT_VERSION" | cut -d. -f2)
           PATCH=$(echo "$CURRENT_VERSION" | cut -d. -f3)
-          
+
           echo "📋 Current: $MAJOR.$MINOR.$PATCH"
-          
+
           # Determine version bump from PR title
           # Check for breaking changes (major bump) - must check BEFORE checking for feat!
           if echo "$PR_TITLE" | grep -qE '^[a-z]+(\([^)]+\))?!:'; then
@@ -188,11 +188,11 @@ jobs:
             NEW_PATCH=$((PATCH + 1))
             echo "🔧 Patch changes → PATCH bump"
           fi
-          
+
           BASE_VERSION="${NEW_MAJOR}.${NEW_MINOR}.${NEW_PATCH}"
           echo "📦 New base version: $BASE_VERSION"
         fi
-        
+
         # Apply channel suffix
         if [ "$BRANCH" = "main" ]; then
           FULL_VERSION="$BASE_VERSION"
@@ -200,10 +200,10 @@ jobs:
           echo "✅ Stable release: $FULL_VERSION"
         else
           CHANNEL="$BRANCH"  # "dev" or "beta"
-          
+
           # Find latest tag for this version+channel
           LATEST_TAG=$(git tag -l "v${BASE_VERSION}-${CHANNEL}.*" | sort -V | tail -1)
-          
+
           if [ -z "$LATEST_TAG" ]; then
             COUNTER=1
             echo "📦 First $CHANNEL release for version $BASE_VERSION"
@@ -214,26 +214,26 @@ jobs:
             echo "📦 Found latest tag: $LATEST_TAG"
             echo "⬆️  Incrementing counter to: $COUNTER"
           fi
-          
+
           FULL_VERSION="${BASE_VERSION}-${CHANNEL}.${COUNTER}"
           echo "✅ $CHANNEL release: $FULL_VERSION"
         fi
-        
+
         echo "version=$FULL_VERSION" >> $GITHUB_OUTPUT
         echo "channel=$CHANNEL" >> $GITHUB_OUTPUT
         echo "base_version=$BASE_VERSION" >> $GITHUB_OUTPUT
-        
+
         echo "🚀 Version for CHANGELOG: $FULL_VERSION (base: $BASE_VERSION, channel: $CHANNEL)"
-    
+
     - name: Generate CHANGELOG entry
       if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       run: |
         VERSION="${{ steps.version.outputs.version }}"
         CHANNEL="${{ steps.version.outputs.channel }}"
         REPO_URL="https://github.com/${{ github.repository }}"
-        
+
         echo "📝 Generating CHANGELOG for $VERSION ($CHANNEL)..."
-        
+
         # Create a context file for conventional-changelog with version info
         cat > .changelog-context.json << EOF
         {
@@ -245,29 +245,29 @@ jobs:
           "linkReferences": true
         }
         EOF
-        
+
         # Generate changelog with version and links
         npx conventional-changelog-cli -p angular \
           -i CHANGELOG.md \
           -s \
           --context .changelog-context.json \
           --release-count 0
-        
+
         # Add release link and channel badge to the version header
         if [ "$CHANNEL" != "stable" ]; then
           CHANNEL_BADGE="**[$CHANNEL]** "
         else
           CHANNEL_BADGE=""
         fi
-        
+
         # Escape special characters in version for regex (dots and dashes)
         VERSION_ESCAPED=$(echo "$VERSION" | sed 's/\./\\./g; s/-/\\-/g')
-        
+
         echo "🔍 Looking for version header: # ${VERSION}"
-        
+
         # conventional-changelog generates: # version (date)
         # We want to change it to: ## [channel badge] [version](release-link) (date)
-        
+
         # Match "# version (date)" and replace with "## [channel] [version](link) (date)"
         if grep -q "^# ${VERSION} " CHANGELOG.md; then
           echo "✅ Found version header: # ${VERSION}"
@@ -280,35 +280,35 @@ jobs:
           echo "📋 First 5 lines of CHANGELOG:"
           head -5 CHANGELOG.md
         fi
-        
+
         rm -f CHANGELOG.md.bak
-        
+
         echo "📋 Modified CHANGELOG (first 5 lines):"
         head -5 CHANGELOG.md
-        
+
         # Clean up
         rm -f .changelog-context.json
-        
+
         echo "✅ CHANGELOG generated with release link"
-    
+
     - name: Check for changes
       if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true'
       id: check_changes
       run: |
         git diff --quiet CHANGELOG.md || echo "changed=true" >> $GITHUB_OUTPUT
-    
+
     - name: Commit CHANGELOG changes
       if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true' && steps.check_changes.outputs.changed == 'true'
       run: |
         git config user.name "github-actions[bot]"
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
-        
+
         git add CHANGELOG.md
         git commit -m "chore: update CHANGELOG for ${{ steps.version.outputs.version }} [skip ci]"
         git push
-        
+
         echo "✅ CHANGELOG committed to PR branch"
-    
+
     - name: Comment on PR
       if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true' && steps.check_changes.outputs.changed == 'true'
       uses: actions/github-script@v7
@@ -317,11 +317,11 @@ jobs:
         script: |
           const version = '${{ steps.version.outputs.version }}';
           const channel = '${{ steps.version.outputs.channel }}';
-          
+
           let channelEmoji = '🚀';
           if (channel === 'beta') channelEmoji = '⚠️';
           if (channel === 'dev') channelEmoji = '🚧';
-          
+
           github.rest.issues.createComment({
             issue_number: context.issue.number,
             owner: context.repo.owner,
@@ -339,7 +339,7 @@ jobs:
 
           The CHANGELOG will be included in the release notes when this PR is merged.`
           })
-    
+
     - name: No changes needed
       if: github.event.action != 'edited' && steps.check_changelog_modified.outputs.modified != 'true' && steps.check_changes.outputs.changed != 'true'
       run: |
