--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,16 @@ jobs:
     runs-on: macos-15
 
     steps:
-    - name: Checkout code
+    - name: Checkout PR branch
+      if: github.event_name == 'pull_request'
+      uses: actions/checkout@v4
+      with:
+        ref: ${{ github.head_ref }}
+        fetch-depth: 0
+        token: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Checkout push branch
+      if: github.event_name == 'push'
       uses: actions/checkout@v4
       with:
         fetch-depth: 0
