--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,12 @@ jobs:
     - name: Determine version and channel
       id: version
       run: |
-        BRANCH="${{ github.ref_name }}"
+        # For PR builds, use the target branch; for push builds, use the current branch
+        if [ "${{ github.event_name }}" = "pull_request" ]; then
+          BRANCH="${{ github.base_ref }}"
+        else
+          BRANCH="${{ github.ref_name }}"
+        fi
 
         echo "🎯 Branch: $BRANCH"
 
