fix pr-check workflow

--- a/.github/workflows/pr-check.yml
+++ b/.github/workflows/pr-check.yml
@@ -14,6 +14,7 @@ permissions:
 
 jobs:
   pr-validation:
+    if: github.actor != 'github-actions[bot]'
     runs-on: ubuntu-latest
 
     steps:
@@ -304,7 +305,7 @@ jobs:
         git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
 
         git add CHANGELOG.md
-        git commit -m "chore: update CHANGELOG for ${{ steps.version.outputs.version }} [skip ci]"
+        git commit -m "chore: update CHANGELOG for ${{ steps.version.outputs.version }}"
         git push
 
         echo "✅ CHANGELOG committed to PR branch"
